@@ -1,0 +1,41 @@
+.\" 2004, Max Vozeler <max@hinterhof.net>
+.\" Released under the Gnu GPL
+.TH QUOTASTATS 8 "April 2, 2004" "" "quota"
+.SH NAME
+.B quotastats
+\- Program to query quota statistics
+.SH SYNOPSIS
+.I /usr/sbin/quotastats
+.SH DESCRIPTION
+.B quotastats
+queries the kernel for quota statistics.
+It displays:
+.P
+.PD 0
+.RS 4
+.IP \[bu]
+Supported kernel quota version
+.IP \[bu]
+Number of dquot lookups
+.IP \[bu]
+Number of dquot drops
+.IP \[bu]
+Number of dquot reads
+.IP \[bu]
+Number of dquot writes
+.IP \[bu]
+Number of quotafile syncs
+.IP \[bu]
+Number of dquot cache hits
+.IP \[bu]
+Number of allocated dquots
+.IP \[bu]
+Number of free dquots
+.IP \[bu]
+Number of in use dquot entries (user/group)
+.RE
+.PD
+.SH OPTIONS
+None.
+.SH SEE ALSO
+.BR quota (1).
