@@ -1,0 +1,38 @@
+.\" 2004, Max Vozeler <max@hinterhof.net>
+.\" Released under the Gnu GPL
+.TH XQMSTATS 8 "April 2, 2004" "" "quota"
+.SH NAME
+.B xqmstats
+\- Display XFS quota manager statistics from /proc
+.SH SYNOPSIS
+.I /usr/sbin/xqmstats
+.SH DESCRIPTION
+.B xqmstat
+queries the kernel for the XFS Quota Manager dquot statistics.
+It displays:
+.P
+.PD 0
+.RS 4
+.IP \[bu]
+Reclaims
+.IP \[bu]
+Missed reclaims
+.IP \[bu]
+Dquot dups
+.IP \[bu]
+Cache misses
+.IP \[bu]
+Cache hits
+.IP \[bu]
+Dquot wants
+.IP \[bu]
+Shake reclaims
+.IP \[bu]
+Inact reclaims
+.RE
+.PD
+.SH OPTIONS
+None.
+.SH SEE ALSO
+.BR quotastats (1),
+.BR quota (1).
